Manually invoking model Binding

--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartFour.AdvConcepts/PartFour.AdvConcepts.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartFour.AdvConcepts/PartFour.AdvConcepts.csproj
@@ -97,6 +97,10 @@
     <Content Include="Areas\Chapter24\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Chapter24\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Chapter24\Views\Person\Index.cshtml" />
+    <Content Include="Areas\Chapter24\Views\Person\CreatePerson.cshtml" />
+    <Content Include="Areas\Chapter24\Views\Person\DisplaySummary.cshtml" />
+    <Content Include="Areas\Chapter24\Views\Home\Names.cshtml" />
+    <Content Include="Areas\Chapter24\Views\Person\Address.cshtml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.1.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
@@ -117,7 +121,10 @@
     <Compile Include="Areas\Chapter23\Models\Personnel.cs" />
     <Compile Include="Areas\Chapter23\Models\PersonnelMD.cs" />
     <Compile Include="Areas\Chapter24\Chapter24AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter24\Controllers\HomeController.cs" />
     <Compile Include="Areas\Chapter24\Controllers\PersonController.cs" />
+    <Compile Include="Areas\Chapter24\Infrastructure\CountryValueProvider.cs" />
+    <Compile Include="Areas\Chapter24\Infrastructure\CustomValueProviderFactor.cs" />
     <Compile Include="Areas\Chapter24\Models\Personnel.cs" />
     <Compile Include="Areas\Chapter24\Models\PersonnelMD.cs" />
     <Compile Include="Controllers\MainController.cs" />
