bundling chapter completed

--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartFour.AdvConcepts/Web.config
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartFour.AdvConcepts/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.8.1" />
+    <compilation debug="false" targetFramework="4.8.1" />
     <httpRuntime targetFramework="4.8.1" />
   </system.web>
   <runtime>
@@ -31,6 +31,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
