--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Web.config
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Web.config
@@ -25,7 +25,7 @@
 		<authentication mode="Forms">
 			<forms loginUrl="~/Account/Login" timeout="2880">
 				<credentials passwordFormat="Clear">
-					<user name="admin" password="secret"/>
+					<user name="admin" password="secret" />
 				</credentials>
 			</forms>
 		</authentication>
@@ -62,7 +62,15 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+				<bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
