--- a/Textbook Exercises/ASP.NETMVCPlatform/PartOne/Web.config
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartOne/Web.config
@@ -17,6 +17,7 @@
 	<system.webServer>
 		<modules>
 			<add name="Timer" type="PartOne.Infrastructure.TimerModule"/>
+			<add name="Total" type="PartOne.Infrastructure.TotalTimeModule"/>
 		</modules>
 	</system.webServer>
 	<runtime>
