Modules and Handlers

--- a/Textbook Exercises/ASP.NETMVCPlatform/PartOne/Web.config
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartOne/Web.config
@@ -16,9 +16,17 @@
 	</system.web>
 	<system.webServer>
 		<modules>
-			<add name="Timer" type="PartOne.Infrastructure.TimerModule"/>
-			<add name="Total" type="PartOne.Infrastructure.TotalTimeModule"/>
+			<!--<add name="Timer" type="PartOne.Infrastructure.TimerModule"/>-->
+			<!--<add name="Total" type="PartOne.Infrastructure.TotalTimeModule"/>-->
 		</modules>
+		<handlers>
+			<add name="DayJSON" path="/handler/*.json" verb="GET"
+				 type="PartOne.Infrastructure.DayOfWeekHandler"/>
+			<add name="DayHTML" path="/handler/day.html" verb="*"
+				 type="PartOne.Infrastructure.DayOfWeekHandler"/>
+			<add name="SiteLength" path="/handler/site" verb="*"
+				 type="PartOne.Infrastructure.SiteLengthHandler"/>
+		</handlers>
 	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
