--- a/Textbook Exercises/ASP.NETMVCPlatform/PartOne/Web.config
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartOne/Web.config
@@ -18,6 +18,7 @@
 		<modules>
 			<!--<add name="Timer" type="PartOne.Infrastructure.TimerModule"/>-->
 			<!--<add name="Total" type="PartOne.Infrastructure.TotalTimeModule"/>-->
+			<add name="DayPrep" type="PartOne.Infrastructure.DayModule"/>
 		</modules>
 		<handlers>
 			<add name="DayJSON" path="/handler/*.json" verb="GET"
@@ -26,6 +27,8 @@
 				 type="PartOne.Infrastructure.DayOfWeekHandler"/>
 			<add name="SiteLength" path="/handler/site" verb="*"
 				 type="PartOne.Infrastructure.SiteLengthHandler"/>
+			<add name="CounterFactory" path="/handler/counter" verb="*"
+				 type="PartOne.Infrastructure.CounterHandlerFactory"/>
 		</handlers>
 	</system.webServer>
 	<runtime>
