workflow section completed.

--- a/Textbook Exercises/ASP.NETMVCPlatform/PartTwo/Web.config
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartTwo/Web.config
@@ -18,6 +18,9 @@
 		<modules>
 			<add name="Redirect" type="PartTwo.Workflow.Infrastructure.RedirectModule"/>
 			<add name="Select" type="PartTwo.Workflow.Infrastructure.HandlerSelectionModule"/>
+			<add name="Debug" type="PartTwo.Workflow.Infrastructure.DebugModule"/>
+			<!--<add name="Deflect" type="PartTwo.Workflow.Infrastructure.DeflectModule"/>-->
+			<add name="EventList" type="PartTwo.Workflow.Infrastructure.EventListModule"/>
 		</modules>
 	</system.webServer>
 	<runtime>
