--- a/Textbook Exercises/ASP.NETMVCPlatform/PartTwo/PartTwo.csproj
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartTwo/PartTwo.csproj
@@ -98,6 +98,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\DebugModule.cs" />
+    <Compile Include="Infrastructure\DeflectModule.cs" />
+    <Compile Include="Infrastructure\EventListModule.cs" />
     <Compile Include="Infrastructure\HandlerSelectionModule.cs" />
     <Compile Include="Infrastructure\InfoHandler.cs" />
     <Compile Include="Infrastructure\RedirectModule.cs" />
