--- a/Textbook Exercises/ASP.NETMVCPlatform/PartTwo.DetectingDeviceCapabilities/Views/web.config
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartTwo.DetectingDeviceCapabilities/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="PartTwo.DetectingDeviceCapabilities" />
+        <add namespace="DetectingDeviceCapabilities" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
