--- a/Textbook Exercises/ASP.NETMVCPlatform/PartTwo.DetectingDeviceCapabilities/packages.config
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartTwo.DetectingDeviceCapabilities/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FiftyOne.Pipeline.Core" version="4.4.90" targetFramework="net481" />
+  <package id="Glimpse" version="1.8.2" targetFramework="net481" />
+  <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net481" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net481" />
