basic configuration data

--- a/Textbook Exercises/ASP.NETMVCPlatform/PartThree.Chapter9/PartThree.Chapter9.csproj
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartThree.Chapter9/PartThree.Chapter9.csproj
@@ -87,19 +87,29 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\CustomDefaults.cs" />
+    <Compile Include="Infrastructure\NewUserDefaultSection.cs" />
+    <Compile Include="Infrastructure\Place.cs" />
+    <Compile Include="Infrastructure\PlaceCollection.cs" />
+    <Compile Include="Infrastructure\PlaceSection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
+    <Content Include="Content\bootstrap.min.css.map" />
     <None Include="packages.config" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\DisplaySingle.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -109,7 +119,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
