reading out webconfig content

--- a/Textbook Exercises/ASP.NETMVCPlatform/PartThree.Chapter9/PartThree.Chapter9.csproj
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartThree.Chapter9/PartThree.Chapter9.csproj
@@ -110,6 +110,7 @@
     <None Include="packages.config" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\DisplaySingle.cshtml" />
+    <Content Include="Views\Home\Web.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
