--- a/Textbook Exercises/ASP.NETMVCPlatform/PartThree.Chapter9/Views/web.config
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartThree.Chapter9/Views/web.config
@@ -23,6 +23,7 @@
 
 	<appSettings>
 		<add key="webpages:Enabled" value="false" />
+		<add key="defaultLanguage" value="Haitian-Creole"/>
 	</appSettings>
 
 	<system.webServer>
