implementing claims syntax

--- a/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Ch13_IdentityApiSupport.csproj
+++ b/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Ch13_IdentityApiSupport.csproj
@@ -191,6 +191,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\ClaimsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RoleAdminController.cs" />
     <Compile Include="Global.asax.cs">
@@ -198,8 +199,12 @@
     </Compile>
     <Compile Include="Infrastructure\AppIdentityDBContext.cs" />
     <Compile Include="Infrastructure\AppUserManager.cs" />
+    <Compile Include="Infrastructure\ClaimsAccessAttribute.cs" />
+    <Compile Include="Infrastructure\ClaimsRoles.cs" />
     <Compile Include="Infrastructure\CustomPasswordValidator.cs" />
     <Compile Include="Infrastructure\CustomUserValidator.cs" />
+    <Compile Include="Infrastructure\IdentityHelpers.cs" />
+    <Compile Include="Infrastructure\LocationClaimsProvider.cs" />
     <Compile Include="Migrations\202406291537498_CountryProperty.cs" />
     <Compile Include="Migrations\202406291537498_CountryProperty.Designer.cs">
       <DependentUpon>202406291537498_CountryProperty.cs</DependentUpon>
@@ -231,6 +236,7 @@
     <Content Include="Views\RoleAdmin\Create.cshtml" />
     <Content Include="Views\RoleAdmin\Edit.cshtml" />
     <Content Include="Views\Home\UserProperties.cshtml" />
+    <Content Include="Views\Claims\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
