--- a/Textbook Exercises/PRO_ASP.NET_WebAPI/Part2.SampleApp.Domain/Part2.SampleApp.Domain.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_WebAPI/Part2.SampleApp.Domain/Part2.SampleApp.Domain.csproj
@@ -53,6 +53,10 @@
   <ItemGroup>
     <Compile Include="Entities\DBContext\EntitiesContext.cs" />
     <Compile Include="Entities\DBContext\IEntity.cs" />
+    <Compile Include="Migrations\202407100110323_Init.cs" />
+    <Compile Include="Migrations\202407100110323_Init.Designer.cs">
+      <DependentUpon>202407100110323_Init.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\Role.cs" />
@@ -62,6 +66,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202407100110323_Init.resx">
+      <DependentUpon>202407100110323_Init.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
